// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Small checkGrammar 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkGrammar 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkGrammar 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkGrammar 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkHighlight 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small checkSpaces 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small className 1`] = `
<small
  className="uu5-bricks-small my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small content 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</small>
`;

exports[`UU5.Bricks.Small content 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</small>
`;

exports[`UU5.Bricks.Small content 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</small>
`;

exports[`UU5.Bricks.Small content 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</small>
`;

exports[`UU5.Bricks.Small controlled 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small controlled 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small controlled 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small controlled 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small default props 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small disabled 1`] = `
<small
  className="uu5-bricks-small uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</small>
`;

exports[`UU5.Bricks.Small disabled 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small disabled 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small disabled 4`] = `
<small
  className="uu5-bricks-small uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</small>
`;

exports[`UU5.Bricks.Small docKit examples UU5.Bricks.Small should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <P
    className={null}
    content="This is main text with normal size"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
   
  <P
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID3"
    ignoreInnerHTML={false}
    key="uuID3"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    <Small
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID4"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      This is smaller text
    </Small>
  </P>
</div>
`;

exports[`UU5.Bricks.Small dynamic 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small dynamic 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small dynamic 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small dynamic 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden 1`] = `
<small
  className="uu5-bricks-small uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small hidden 4`] = `
<small
  className="uu5-bricks-small uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small id 1`] = `
<small
  className="uu5-bricks-small"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small ignoreHTML 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small mainAttrs 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small name 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex 1`] = `
<small
  className="uu5-bricks-small uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small noIndex 4`] = `
<small
  className="uu5-bricks-small uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected 1`] = `
<small
  className="uu5-bricks-small uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small selected 4`] = `
<small
  className="uu5-bricks-small uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small style 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small style 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small style 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small style 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector 2`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector 3`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small textCorrector 4`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Small tooltip 1`] = `
<small
  className="uu5-bricks-small"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
